# academic-research-skills-universal

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  NOTICE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: platform-validation.yml
.github/workflows/: tests.yml
ars_universal/: __init__.py  adapters.py  cli.py  diagnostics.py  installers.py  platforms.py
docs/: ARCHITECTURE.md  GITHUB_SETUP.md  INSTALLATION.md  PLATFORM_SUPPORT.md  RELEASE_CHECKLIST.md  TEST_MATRIX.md  VALIDATION.md
tests/: test_cli.py  test_installers.py  test_smoke_script.py  test_validation_registry.py
tools/: smoke_all_platforms.py
validation/: platform-validation.json
